--- a/src/SASS/components/loading-screen.scss
+++ b/src/SASS/components/loading-screen.scss
@@ -35,6 +35,11 @@
   }
 }
 
+.loading-screen-logo {
+  width: 128px;
+  height: 128px;
+}
+
 @keyframes rotation {
   0% {
     transform: rotate(0deg);
